# solafune-deforestation

./: .gitignore  README.md  backup_environment.yml  environment.yml  environment_cuda.yml  hello.py  invariance_constrained.py  main_train.py  pyproject.toml
.github/workflows/: python-package-conda.yml
notebooks/: OLD_NOTEBOOK.ipynb  main_train.py  train_model.ipynb  train_model_1060.ipynb
outputs/submissions/: sample_answer.json
src/: augmentation.py  config.py  dataset.py  global_paths.py  individual_object_functions.py  inference_utils.py  invariance_constrained.py  model.py  oba.py  paths.py  postprocess.py  train_utils.py  utilities.py
src/outputs/submissions/: submission.json
src/prediction/: predict.py
src/preprocessing/: change_split.py  data_visualization.py  generate_masks.ipynb  preprocess_train.py
src/preprocessing/data_exploration/: data_visualization.py  oba_visualization.py  visualize_oba.py
src/preprocessing/mask_generation/: generate_masks.py  get_masks.py  visualize_masks.py
src/training/: train_model.ipynb  train_model.py  train_model_1060.ipynb
src/utils/: data_utils.py  global_paths.py  inference_utils.py  train_utils.py
tests/: test_preprocessing.py
